[gd_scene load_steps=9 format=3 uid="uid://bnfr8gek24m47"]

[ext_resource type="Script" path="res://src/game/MemoryGame.gd" id="1_13jq5"]
[ext_resource type="PackedScene" uid="uid://ubmqrubcq2a2" path="res://scenes/game/templates/CardTemplate.tscn" id="3_ihyl6"]
[ext_resource type="Script" path="res://src/game/CameraController.gd" id="4_4ihyn"]
[ext_resource type="PackedScene" uid="uid://csamt2tu6hlpo" path="res://scenes/game/overlay/FinishGame.tscn" id="4_6f670"]
[ext_resource type="Script" path="res://src/game/PlayerManager.gd" id="4_n744t"]
[ext_resource type="Texture2D" uid="uid://dmf23xobks0pc" path="res://assets/sprites/wood.png" id="7_35r1o"]
[ext_resource type="PackedScene" uid="uid://d0vijthhc3d38" path="res://scenes/game/overlay/PlayersOverlay.tscn" id="7_a7rnv"]
[ext_resource type="Script" path="res://src/game/Background.gd" id="7_kxmqb"]

[node name="MemoryGame" type="Node2D" node_paths=PackedStringArray("gui_node")]
script = ExtResource("1_13jq5")
separation = 25
card_template = ExtResource("3_ihyl6")
gui_node = NodePath("CanvasLayer")
finished_game_template = ExtResource("4_6f670")

[node name="Players" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("4_n744t")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(600, 0)
script = ExtResource("4_4ihyn")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer"]
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 25

[node name="PlayersOverlay" parent="CanvasLayer/MarginContainer" instance=ExtResource("7_a7rnv")]
layout_mode = 2

[node name="Background" type="Node2D" parent="." node_paths=PackedStringArray("camera_node")]
script = ExtResource("7_kxmqb")
background_texture = ExtResource("7_35r1o")
camera_node = NodePath("../Camera2D")

[connection signal="game_has_endet" from="." to="CanvasLayer/MarginContainer/PlayersOverlay" method="game_ended"]
[connection signal="player_scored" from="." to="Players" method="player_scored"]
[connection signal="round_end" from="." to="Players" method="next_player"]
[connection signal="round_end" from="." to="CanvasLayer/MarginContainer/PlayersOverlay" method="round_end"]
[connection signal="player_added" from="Players" to="CanvasLayer/MarginContainer/PlayersOverlay" method="add_player"]
[connection signal="player_changed" from="Players" to="CanvasLayer/MarginContainer/PlayersOverlay" method="player_changed"]
[connection signal="player_score_changed" from="Players" to="CanvasLayer/MarginContainer/PlayersOverlay" method="player_scored"]
